--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -167,7 +167,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/manropebold"
-        android:text="Go to sleep in 00.00.00"
+        android:text="Go to bed in 00.00.00"
         android:textColor="@color/white"
         android:textSize="15dp"
         android:textStyle="bold"
