//bug fixed //sharedPreferences works fine now!

--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -48,47 +48,7 @@
             android:src="@drawable/line"
             app:tint="@color/white" />
     </LinearLayout>
-    <!--
-        <ProgressBar
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:id="@+id/wheelprogress"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            app:progressColor="#32a852"
-            app:percentage="302"/>
 
-
-        <com.app.progresviews.ProgressWheel
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:id="@+id/wheelprogress"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            app:progressColor="#32a852"
-            app:barWidth="10dp"
-            app:marginBtwText= "25dp"
-            app:countText="84%"
-            app:definitionText="Quality"
-            app:countTextColor="@color/white"
-            app:defTextColor="@color/white"
-            app:defTextSize="15sp"
-            app:countTextSize="35sp"
-            app:percentage="302"/> -->
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:textSize="12dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/manroperegular"
-        android:textColor="#9ca69f"
-        android:textStyle="bold"
-        android:text="Sleep duration" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -100,12 +60,33 @@
         android:orientation="vertical">
 
 
+<!--
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginBottom="20dp"
+            android:indeterminateOnly="false"
+            android:progressDrawable="@drawable/circle_stat"
+            tools:progress="80"
+            />
+
+        <TextView
+            android:id="@+id/progress_circularPercentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/manropebold"
+            android:text="60%"
+            android:textColor="@color/black"
+            android:textSize="20dp" /> -->
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/manropebold"
             android:text="Sleep Information"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -129,7 +110,9 @@
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
                     android:src="@drawable/themoon"
-                    app:tint="#69706b"></ImageView>
+                    app:tint="#69706b">
+
+                </ImageView>
 
                 <TextView
                     android:id="@+id/wenttosleep"
@@ -142,7 +125,9 @@
                     android:text="23:00:00"
                     android:textColor="@color/black"
                     android:textSize="32dp"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold">
+
+                </TextView>
 
             </LinearLayout>
 
@@ -180,7 +165,9 @@
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
                     android:src="@drawable/sun"
-                    app:tint="#69706b"></ImageView>
+                    app:tint="#69706b">
+
+                </ImageView>
 
                 <TextView
                     android:id="@+id/wakeup"
@@ -193,7 +180,9 @@
                     android:text="06:00:00"
                     android:textColor="@color/black"
                     android:textSize="32dp"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold">
+
+                </TextView>
 
             </LinearLayout>
 
@@ -206,7 +195,9 @@
                 android:fontFamily="@font/manroperegular"
                 android:text="Wake up"
                 android:textColor="#69706b"
-                android:textSize="24dp"></TextView>
+                android:textSize="24dp">
+
+            </TextView>
         </LinearLayout>
 
         <Button
@@ -214,7 +205,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/manropebold"
             android:scaleType="fitEnd"
