--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -60,16 +60,15 @@
         android:orientation="vertical">
 
 
-<!--
         <ProgressBar
             android:id="@+id/progress_circular"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginBottom="20dp"
             android:indeterminateOnly="false"
+            android:max="100"
             android:progressDrawable="@drawable/circle_stat"
-            tools:progress="80"
-            />
+            tools:progress="100" />
 
         <TextView
             android:id="@+id/progress_circularPercentage"
@@ -78,7 +77,7 @@
             android:fontFamily="@font/manropebold"
             android:text="60%"
             android:textColor="@color/black"
-            android:textSize="20dp" /> -->
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -141,7 +140,9 @@
                 android:fontFamily="@font/manroperegular"
                 android:text="Went to sleep"
                 android:textColor="#69706b"
-                android:textSize="24dp"></TextView>
+                android:textSize="24dp">
+
+            </TextView>
 
         </LinearLayout>
 
