--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -77,6 +77,7 @@
             android:fontFamily="@font/manropebold"
             android:text="60%"
             android:textColor="@color/black"
+            android:layout_marginBottom="10dp"
             android:textSize="20dp" />
 
         <TextView
